[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
